--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <title>Kevin</title>
 </head>
 <body>
@@ -11,11 +12,13 @@
        <div class="container">
         <nav>
             <img src="images/logo.png" alt="logo">
-            <ul>
-                <li><a href="#index">Home</a></li>
-                <li><a href="#about">About</a></li>9
+            <ul id="sidemenu">
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
             </ul>
+            <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
             <p>Frontend Developer</p>
@@ -82,6 +85,36 @@
             <a href="#" class="btn">See More</a>
         </div>
     </div>
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-tittle">Contact Me</h1>
+                    <p><i class="fa-solid fa-envelope"></i> youremail@example.com</p>
+                    <p><i class="fa-solid fa-phone"></i> +123456789</p>
+                    <div class="social-icons">
+                        <a href="https://www.linkedin.com/in/kevin-oluda-65b848210/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://twitter.com/oluda_kevin"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    </div>
+                    <a href="images/Resume-Kevin-Oluda (6) (4).pdf" download="" class="btn btn2">Download Resume</a>
+                </div>
+                <div class="contact-right">
+                    <form action="" name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message" required></textarea>
+                        <button type="submit" class="btn btn2">Send Message</button>
+                    </form>
+                    <span id="msg"></span>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <a href="https://github.com/254guru">
+                <p>copyright &copy; 2024, Kevin</p>
+            </a>
+        </div>
+    </div>
     <script>
         var tabLinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
@@ -97,6 +130,33 @@
             document.getElementById(tabName).classList.add("active-tab");
         }
     </script>
+    <script>
+        var sidemenu = document.getElementById("sidemenu");
+        function openmenu(){
+            sidemenu.style.right = "0";
+        }
+        function closemenu(){
+            sidemenu.style.right = "-200px";
+        }
+    </script>
     <script src="https://kit.fontawesome.com/b863873207.js" crossorigin="anonymous"></script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbzbvvkHdwOS8aJVXmH9BUMBSjvOPdg11DzNWop0TWMNsW8KZVj3ZzSs4Yok9c_c_yuhtA/exec'
+        const form = document.forms['submit-to-google-sheet']
+        const msg = document.getElementById('msg')
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                msg.innerHTML = "message sent successfully"
+                setTimeout(function(){
+                    msg.innerHTML = ""
+                }, 5000);
+                form.reset()
+            })
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
 </body>
 </html>
