add contact details

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-tittle">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i> youremail@example.com</p>
-                    <p><i class="fa-solid fa-phone"></i> +123456789</p>
+                    <p><i class="fa-solid fa-envelope"></i> oludakevin@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i> +254743707128</p>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/kevin-oluda-65b848210/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://twitter.com/oluda_kevin"><i class="fa-brands fa-square-x-twitter"></i></a>
