--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
             </ul>
@@ -56,7 +57,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio">
+    <div id="portfolio">
         <div class="container">
             <h1 class="sub-tittle">My Work</h1>
             <div class="work-list">
