add background image to header

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>web development</span><br>web app development</li>
+                            <li><span>Graphic Design</span><br>Logo and social media design</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
