--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/FB_IMG_1641814228743.jpg">
     <title>Kevin</title>
 </head>
 <body>
