set a preview for the link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/FB_IMG_1641814228743.jpg">
     <title>Kevin</title>
+    <meta name="description" content="A brief intro into Kevin Oluda">
+    <meta property="og:title" content="Kevin">
+    <meta property="og:description" content="A brief intro into Kevin Oluda">
+    <meta property="og:image" content="https://photos.app.goo.gl/2mcSPugZzE4at4x29"> <!-- URL to the image you want to display -->
+    <meta property="og:url" content="https://kevin-wk3w.onrender.com/"> <!-- URL of your website -->
+    <meta property="og:type" content="website">
 </head>
 <body>
     <div id="header">
