--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/FB_IMG_1641814228743.jpg">
     <title>Kevin</title>
-    <meta name="description" content="A brief intro into Kevin Oluda">
+    <meta name="description" content="Welcome to Kevin's personal portfolio website, showcasing his projects, skills, and experiences in web development and design. Explore Kevin's work and get inspired!">
     <meta property="og:title" content="Kevin">
-    <meta property="og:description" content="A brief intro into Kevin Oluda">
+    <meta property="og:description" content="Check out Kevin's amazing portfolio! Discover his latest projects, skills, and experiences in web development and design. Dive into Kevin's world of creativity and innovation.">
     <meta property="og:image" content="https://photos.app.goo.gl/2mcSPugZzE4at4x29"> <!-- URL to the image you want to display -->
     <meta property="og:url" content="https://kevin-wk3w.onrender.com/"> <!-- URL of your website -->
     <meta property="og:type" content="website">
