--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="header">
        <div class="container">
         <nav>
-            <img src="images/logo.png" alt="logo">
+            <img src="images/Kevin.__1_-removebg-preview.png" alt="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -42,11 +42,17 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-tittle">About Me</h1>
-                    <p>
-                        I am a passionate software engineering student at ALX Africa specializing in front-end development. With two years of hands-on experience and proficiency in Python, particularly flask, I've contributed to diverse projects, focusing on creating visually appealing and user-friendly interfaces. Driven by curiosity and a commitment to excellence, I thrive in dynamic environments where I can innovate and overcome challenges with grace.
-                        Beyond coding, I believe in crafting meaningful experiences through technology. I am eager to collaborate with like-minded individuals and contribute to projects that push the boundaries of front-end development. Together, let's create something extraordinary.
+                    <p class="text">
+                        I am a passionate software engineering student at ALX Africa specializing in front-end development. With two years of hands-on experience and proficiency in Python, particularly flask, I've contributed to diverse projects, focusing on creating visually appealing and user-friendly interfaces.
                     </p>
-                    <div class="tab-tittles">
+                    <p>
+                        Driven by curiosity and a relentless pursuit of excellence, I thrive in dynamic environments that challenge me to innovate and push boundaries. I take pride in my ability to translate complex ideas into elegant solutions, leveraging my analytical mindset and attention to detail to overcome obstacles with grace.
+                    </p>
+                    <p>
+                        My journey in software engineering is not just about writing code; it's about crafting meaningful experiences that make a difference.
+                    </p>
+                    <a href="images/Resume-Kevin-Oluda (6) (4).pdf" download="" class="btn btn2">Download Resume</a>
+                    <!-- <div class="tab-tittles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
                     </div>
@@ -60,7 +66,7 @@
                         <ul>
                             <li><span>2023</span><br>Fullstack software engineering ALX Africa</li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -105,7 +111,7 @@
                         <a href="https://www.linkedin.com/in/kevin-oluda-65b848210/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://twitter.com/oluda_kevin"><i class="fa-brands fa-square-x-twitter"></i></a>
                     </div>
-                    <a href="images/Resume-Kevin-Oluda (6) (4).pdf" download="" class="btn btn2">Download Resume</a>
+                    <!-- <a href="images/Resume-Kevin-Oluda (6) (4).pdf" download="" class="btn btn2">Download Resume</a> -->
                 </div>
                 <div class="contact-right">
                     <form action="" name="submit-to-google-sheet">
@@ -161,7 +167,7 @@
                 msg.innerHTML = "message sent successfully"
                 setTimeout(function(){
                     msg.innerHTML = ""
-                }, 5000);
+                }, 2000);
                 form.reset()
             })
             .catch(error => console.error('Error!', error.message))
