update the about statement

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <div class="about-col-2">
                     <h1 class="sub-tittle">About Me</h1>
                     <p>
-                        I am a passionate software engineering student at ALX Africa specializing in front-end development. With two years of hands-on experience and proficiency in Python, particularly flask, I've contributed to diverse projects, focusing on creating visually appealing and user-friendly interfaces.
+                        a tech enthusiast driven by a relentless determination to become a standout software engineer. My calm demeanor and methodical approach set me apart in the tech world. I thrive on being self-driven, pouring myself into projects with a workaholic's dedication. Pushing the boundaries of my knowledge is my constant pursuit, always seeking to refine my skills.
                     </p>
                     <p>
-                        Driven by curiosity and a relentless pursuit of excellence, I thrive in dynamic environments that challenge me to innovate and push boundaries. I take pride in my ability to translate complex ideas into elegant solutions, leveraging my analytical mindset and attention to detail to overcome obstacles with grace.
+                        Late nights coding and delving into complex algorithms fuel my passion for innovation. I'm always on the lookout for new challenges to tackle and new solutions to create. My ultimate goal isn't just personal success; it's about making a meaningful impact in the tech industry and beyond.
                     </p>
                     <p>
-                        My journey in software engineering is not just about writing code; it's about crafting meaningful experiences that make a difference.
+                        I approach every obstacle with enthusiasm, seeing them as opportunities for growth. For me, being a software engineer isn't just a career—it's a chance to leverage technology for positive change and to improve lives.
                     </p>
                     <a href="images/Resume-Kevin-Oluda (6) (4).pdf" download="" class="btn btn2">Download Resume</a>
                     <!-- <div class="tab-tittles">
