update the about statement

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-tittle">About Me</h1>
                     <p>
-                        a tech enthusiast driven by a relentless determination to become a standout software engineer. My calm demeanor and methodical approach set me apart in the tech world. I thrive on being self-driven, pouring myself into projects with a workaholic's dedication. Pushing the boundaries of my knowledge is my constant pursuit, always seeking to refine my skills.
+                        A tech enthusiast driven by a relentless determination to become a standout software engineer. My calm demeanor and methodical approach set me apart in the tech world. I thrive on being self-driven, pouring myself into projects with a workaholic's dedication. Pushing the boundaries of my knowledge is my constant pursuit, always seeking to refine my skills.
                     </p>
                     <p>
                         Late nights coding and delving into complex algorithms fuel my passion for innovation. I'm always on the lookout for new challenges to tackle and new solutions to create. My ultimate goal isn't just personal success; it's about making a meaningful impact in the tech industry and beyond.
