update style and set functionality to see more button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,32 +8,35 @@
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/FB_IMG_1641814228743.jpg">
     <title>Kevin</title>
-    <meta name="description" content="Welcome to Kevin's personal portfolio website, showcasing his projects, skills, and experiences in web development and design. Explore Kevin's work and get inspired!">
+    <meta name="description"
+        content="Welcome to Kevin's personal portfolio website, showcasing his projects, skills, and experiences in web development and design. Explore Kevin's work and get inspired!">
     <meta property="og:title" content="Kevin">
-    <meta property="og:description" content="Check out Kevin's amazing portfolio! Discover his latest projects, skills, and experiences in web development and design. Dive into Kevin's world of creativity and innovation.">
+    <meta property="og:description"
+        content="Check out Kevin's amazing portfolio! Discover his latest projects, skills, and experiences in web development and design. Dive into Kevin's world of creativity and innovation.">
     <meta property="og:image" content="https://imgur.com/6BNppHo"> <!-- URL to the image you want to display -->
     <meta property="og:url" content="https://kevin-wk3w.onrender.com/"> <!-- URL of your website -->
     <meta property="og:type" content="website">
 </head>
+
 <body>
     <div id="header">
-       <div class="container">
-        <nav>
-            <img src="images/Kevin.__1_-removebg-preview.png" alt="logo">
-            <ul id="sidemenu">
-                <li><a href="#header">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
-            </ul>
-            <i class="fa-solid fa-bars" onclick="openmenu()"></i>
-        </nav>
-        <div class="header-text">
-            <p>Frontend Developer</p>
-            <h1>Hello, I'm <span>Kevin</span><br> Oluda from Kenya </h1>
+        <div class="container">
+            <nav>
+                <img src="images/Kevin.__1_-removebg-preview.png" alt="logo">
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
+                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
+                </ul>
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+            </nav>
+            <div class="header-text">
+                <h1>Hello, I'm <span>Kevin</span><br> <span>Oluda</span> from Kenya </h1>
+                <p>Your friendly neighbourhood Frontend Developer</p>
+            </div>
         </div>
-       </div> 
     </div>
     <div id="about">
         <div class="container">
@@ -43,15 +47,23 @@
                 <div class="about-col-2">
                     <h1 class="sub-tittle">About Me</h1>
                     <p>
-                        A tech enthusiast driven by a relentless determination to become a standout software engineer. My calm demeanor and methodical approach set me apart in the tech world. I thrive on being self-driven, pouring myself into projects with a workaholic's dedication. Pushing the boundaries of my knowledge is my constant pursuit, always seeking to refine my skills.
+                        A tech enthusiast driven by a relentless determination to become a standout software engineer.
+                        My calm demeanor and methodical approach set me apart in the tech world. I thrive on being
+                        self-driven, pouring myself into projects with a workaholic's dedication. Pushing the boundaries
+                        of my knowledge is my constant pursuit, always seeking to refine my skills.
                     </p>
                     <p>
-                        Late nights coding and delving into complex algorithms fuel my passion for innovation. I'm always on the lookout for new challenges to tackle and new solutions to create. My ultimate goal isn't just personal success; it's about making a meaningful impact in the tech industry and beyond.
+                        Late nights coding and delving into complex algorithms fuel my passion for innovation. I'm
+                        always on the lookout for new challenges to tackle and new solutions to create. My ultimate goal
+                        isn't just personal success; it's about making a meaningful impact in the tech industry and
+                        beyond.
                     </p>
                     <p>
-                        I approach every obstacle with enthusiasm, seeing them as opportunities for growth. For me, being a software engineer isn't just a career—it's a chance to leverage technology for positive change and to improve lives.
+                        I approach every obstacle with enthusiasm, seeing them as opportunities for growth. For me,
+                        being a software engineer isn't just a career—it's a chance to leverage technology for positive
+                        change and to improve lives.
                     </p>
-                    <a href="images/Resume-Kevin-Oluda (6) (4).pdf" download="" class="btn btn2">Download Resume</a>
+                    <a href="images/Resume-Kevin-Oluda (4).pdf" download="" class="btn btn2">Download Resume</a>
                     <!-- <div class="tab-tittles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
@@ -79,26 +91,79 @@
                     <img src="images/image-1.png" alt="">
                     <div class="layer">
                         <h3>Modern Login/Registration Form</h3>
-                        <a href="http://mama-s-joy.me/Creative_login_form-1/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="http://mama-s-joy.me/Creative_login_form-1/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/mamajoylandingpage.png" alt="">
+                    <div class="layer">
+                        <h3>EHRS website</h3>
+                        <a href="https://mamas-joy.onrender.com/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/greenmarthomepage.png" alt="">
+                    <div class="layer">
+                        <h3>E-commerce website</h3>
+                        <a href="https://greenmart-ak9w.onrender.com/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/qrcode component.png" alt="">
+                    <div class="layer">
+                        <h3>QR Code Component</h3>
+                        <a href="https://254guru.github.io/QR-code-component/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/image-2.png" alt="">
                     <div class="layer">
                         <h3>Age Calculator App</h3>
-                        <a href="http://mama-s-joy.me/Age-calculator-app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://mamas-joy.onrender.com/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/image-3.png" alt="">
                     <div class="layer">
                         <h3>Hacker Login Form</h3>
-                        <a href="http://mama-s-joy.me/Hacker_login_form/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://greenmart-ak9w.onrender.com/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/basiccalculator.png" alt="">
+                    <div class="layer">
+                        <h3>Basic Calculator</h3>
+                        <a href="http://mama-s-joy.me/Creative_login_form-1/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/advicegenerator.png" alt="">
+                    <div class="layer">
+                        <h3>Advice Generator App</h3>
+                        <a href="https://254guru.github.io/Advice-Generator-App/" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/password generator.png" alt="">
+                    <div class="layer">
+                        <h3>password generator</h3>
+                        <a href="https://github.com/254guru/password-generator" target="_blank"><i
+                                class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See More</a>
+
         </div>
+        <div id="see-more" class="btn">See More</div>
+    </div>
     </div>
     <div id="contact">
         <div class="container">
@@ -108,7 +173,8 @@
                     <p><i class="fa-solid fa-envelope"></i> oludakevin@gmail.com</p>
                     <p><i class="fa-solid fa-phone"></i> +254743707128</p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/kevin-oluda-65b848210/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/kevin-oluda-65b848210/"><i
+                                class="fa-brands fa-linkedin"></i></a>
                         <a href="https://twitter.com/oluda_kevin"><i class="fa-brands fa-square-x-twitter"></i></a>
                     </div>
                     <!-- <a href="images/Resume-Kevin-Oluda (6) (4).pdf" download="" class="btn btn2">Download Resume</a> -->
@@ -131,14 +197,30 @@
         </div>
     </div>
     <script>
+        let loadMoreBtn = document.querySelector('#see-more');
+        let currentItem = 3;
+
+        loadMoreBtn.onclick = () => {
+            let boxes = [...document.querySelectorAll('.work-list .work')];
+            for (var i = currentItem; i < currentItem + 3; i++) {
+                boxes[i].style.display = 'block';
+            }
+            currentItem += 3;
+
+            if (currentItem >= boxes.length) {
+                loadMoreBtn.style.display = 'none';
+            }
+        }
+    </script>
+    <script>
         var tabLinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
 
-        function opentab(tabName){
-            for(tablink of tabLinks){
+        function opentab(tabName) {
+            for (tablink of tabLinks) {
                 tablink.classList.remove("active-link");
             }
-            for(tabcontent of tabcontents){
+            for (tabcontent of tabcontents) {
                 tabcontent.classList.remove("active-tab");
             }
             event.currentTarget.classList.add("active-link");
@@ -147,10 +229,10 @@
     </script>
     <script>
         var sidemenu = document.getElementById("sidemenu");
-        function openmenu(){
+        function openmenu() {
             sidemenu.style.right = "0";
         }
-        function closemenu(){
+        function closemenu() {
             sidemenu.style.right = "-200px";
         }
     </script>
@@ -159,19 +241,20 @@
         const scriptURL = 'https://script.google.com/macros/s/AKfycbzbvvkHdwOS8aJVXmH9BUMBSjvOPdg11DzNWop0TWMNsW8KZVj3ZzSs4Yok9c_c_yuhtA/exec'
         const form = document.forms['submit-to-google-sheet']
         const msg = document.getElementById('msg')
-      
+
         form.addEventListener('submit', e => {
-          e.preventDefault()
-          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => {
-                msg.innerHTML = "message sent successfully"
-                setTimeout(function(){
-                    msg.innerHTML = ""
-                }, 2000);
-                form.reset()
-            })
-            .catch(error => console.error('Error!', error.message))
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => {
+                    msg.innerHTML = "message sent successfully"
+                    setTimeout(function () {
+                        msg.innerHTML = ""
+                    }, 2000);
+                    form.reset()
+                })
+                .catch(error => console.error('Error!', error.message))
         })
-      </script>
+    </script>
 </body>
+
 </html>
