remove header text and sub title text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <img src="images/Kevin.__1_-removebg-preview.png" alt="logo">
                 <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
+                    <!-- <li><a href="#header">Home</a></li> -->
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact Me</a></li>
@@ -32,10 +32,6 @@
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
-            <div class="header-text">
-                <h1>Hello, I'm <span>Kevin</span><br> <span>Oluda</span> from Kenya </h1>
-                <p>Your friendly neighbourhood Frontend Developer</p>
-            </div>
         </div>
     </div>
     <div id="about">
@@ -45,7 +41,11 @@
                     <img src="images/FB_IMG_1641814228743.jpg" alt="Profile image">
                 </div>
                 <div class="about-col-2">
-                    <h1 class="sub-tittle">About Me</h1>
+                    <h1 class="sub-tittle"></h1>
+                    <div class="header-text">
+                        <h1>Hello, I'm <span>Kevin</span><br> <span>Oluda</span> from Kenya </h1>
+                        <p>Your friendly neighbourhood Frontend Developer.</p>
+                    </div>
                     <p>
                         A tech enthusiast driven by a relentless determination to become a standout software engineer.
                         My calm demeanor and methodical approach set me apart in the tech world. I thrive on being
